gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/a15816.d
version https://git-lfs.github.com/spec/v1
oid sha256:03666ebb9384cd858cdfec2413bb7e0cbb331c4bc8b924ff8c4d52fc2f183521
size 34
